--- a/demo.html
+++ b/demo.html
@@ -76,14 +76,7 @@
     background: #eee;
     margin-top: 10px;
     padding: 4px;
-    }
-
-    .erroritem {
-    border-color: red;
-    }
-
-    .warnitem {
-    border-color: orange;
+    overflow: hidden;
     }
     
   </style>
