--- a/demo.html
+++ b/demo.html
@@ -70,13 +70,19 @@
 
     .eventcontrol-target {
     width: 100%;
-    height: 128px;
+    height: 64px;
     border: 1px solid #e5e5e5;
     border-radius: 3px;
     background: #eee;
     margin-top: 10px;
     padding: 4px;
     overflow: hidden;
+    text-align: center;
+    }
+
+    .eventcontrol-target h2 {
+    margin: 0;
+    font-size: 48px;
     }
     
   </style>
@@ -88,7 +94,7 @@
       <nav>
         <ul class="nav nav-pills pull-right">
           <li role="presentation" class="active"><a href="#demo">Demo</a></li>
-          <li role="presentation"><a href="#code">Code</a></li>
+          <li role="presentation"><a href="#usage">Usage</a></li>
           <li role="presentation"><a href="#download">Download</a></li>
         </ul>
       </nav>
@@ -112,7 +118,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h1 id="code">Code</h1>
+        <h1 id="usage">Usage</h1>
       </div>
       <div class="col-md-12">
         <pre>
@@ -120,6 +126,21 @@ $(function() {
   'use strict';
 
   $('.eventcontrol').EventControl({
+    oncreate: function(item, element) {
+      // Called when creating the item.
+      // Can set attributes on the element here,
+      // for example:
+      element.css('color', 'red');
+    },
+    onhover: function(item, element, event, inout) {
+      // Called when mouse hovers over an item
+      // inout is 'in' when entering, and 'out' when exiting.
+    },
+    onclick: function(item, element, event) {
+      // Called when an item is left-clicked.
+    },
+    data: [],
+    // An array of objects with a timestamp key.
   });
 });
         </pre>
@@ -131,17 +152,19 @@ $(function() {
         <h1 id="download">Download</h1>
       </div>
       <div class="col-md-12">
-        <p>
-          EventControl requires <strong>moment.js</strong>, <strong>jquery</strong> and <strong>jquery-mousewheel</strong>.
+        <p>   
+          EventControl needs <a href="http://momentjs.com/">moment.js</a>, <a href="https://jquery.org/">jquery</a> and <a href="https://github.com/jquery/jquery-mousewheel">jquery-mousewheel</a>.
         </p>
         <ul>
-          <li><a href="https://github.com/krig/eventcontrol">Source</a></li>
+          <li><a href="https://github.com/krig/eventcontrol">Github Repository</a></li>
+          <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.js">eventcontrol.js</a></li>
+          <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.css">eventcontrol.css</a></li>
         </ul>
       </div>
     </div>
 
     <footer class="footer">
-      <p>&copy; 2016 Kristoffer Gronlund</p>
+      <p>&copy; 2016 <a href="http://kri.gs/">Kristoffer Gronlund</a></p>
     </footer>
 
   </div>
