fix this/self in zoom

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@ $('.eventcontrol').EventControl(state); // restore state
 $('.eventcontrol').EventControl('zoom-in', focus);
 $('.eventcontrol').EventControl('zoom-out', focus);
         </pre>
+        <p>The library can optionally use <tt>hammer.js</tt> to support basic
+          touch controls. Supporting pinch to zoom interferes with all kinds of
+          functionality, so you'll probably want to hook up zoom in/out to
+          separate controls.
+        </p>
       </div>
     </div>
 
