clean up dependencies section in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     margin: 0;
     font-size: 48px;
     }
-    
+
   </style>
 </head>
 
@@ -167,13 +167,22 @@ $('.eventcontrol').EventControl('zoom-out', focus);
         <h1 id="download">Download</h1>
       </div>
       <div class="col-md-12">
-        <p>   
-          EventControl needs <a href="http://momentjs.com/">moment.js</a>, <a href="https://jquery.org/">jquery</a> and <a href="https://github.com/jquery/jquery-mousewheel">jquery-mousewheel</a>.
-        </p>
         <ul>
           <li><a href="https://github.com/krig/eventcontrol">Github Repository</a></li>
           <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.js">eventcontrol.js</a></li>
           <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.css">eventcontrol.css</a></li>
+        </ul>
+      </div>
+      <div class="col-md-12">
+        <h2>Dependencies</h2>
+        <ul>
+          <li><a href="http://momentjs.com/">moment.js</a></li>
+          <li><a href="https://jquery.org/">jquery</a></li>
+          <li><a href="https://github.com/jquery/jquery-mousewheel">jquery-mousewheel</a></li>
+        </ul>
+        <h3>Optional</h3>
+        <ul>
+          <li><a href="http://hammerjs.github.io/">hammer.js</a></li>
         </ul>
       </div>
     </div>
