add note on minified+gzipped size

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ $('.eventcontrol').EventControl('zoom-out', focus);
       <div class="col-md-12">
         <ul>
           <li><a href="https://github.com/krig/eventcontrol">Github Repository</a></li>
-          <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.js">eventcontrol.js</a></li>
+          <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.js">eventcontrol.js</a></li> - minifies and gzips to about <strong>2.5k</strong> excluding dependencies.
           <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.css">eventcontrol.css</a></li>
         </ul>
       </div>
