visual tweaks, make the control taller by default

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ $(function() {
     },
     data: [],  // An array of objects with a timestamp key.
     hammertime: true, // Enable use of hammer.js to support touch devices
+    items_height: 101, // height in px of item/event area
+    markers_height: 31, // height in px of markers area
   });
 });
         </pre>
