--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@ $('.eventcontrol').EventControl('zoom-out', focus);
       </div>
       <div class="col-md-12">
         <ul>
+          <li><a href="https://github.com/krig/eventcontrol/releases/latest">Latest release</a></li>
           <li><a href="https://github.com/krig/eventcontrol">Github Repository</a></li>
-          <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.js">eventcontrol.js</a></li> - minifies and gzips to about <strong>2.5k</strong> excluding dependencies.
+          <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.js">eventcontrol.js</a></li> - minifies and gzips to about <strong>2.7k</strong> excluding dependencies.
           <li><a href="https://github.com/krig/eventcontrol/raw/master/eventcontrol.css">eventcontrol.css</a></li>
         </ul>
       </div>
