Update zoom description

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ $('.eventcontrol').EventControl({
         <pre>
 var state = $('.eventcontrol').EventControl(); // save state
 $('.eventcontrol').EventControl(state); // restore state
+// zoom in / out: focus is (0 - 1), optional, default is 0.5
 $('.eventcontrol').EventControl('zoom-in', focus);
 $('.eventcontrol').EventControl('zoom-out', focus);
         </pre>
