Add option to display as UTC

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ $('.eventcontrol').EventControl({
   hammertime: true, // Enable use of hammer.js to support touch devices
   items_height: 101, // height in px of item/event area
   markers_height: 31, // height in px of markers area
+  displayUTC: false, // Show timestamps as UTC, else local time
 });
         </pre>
         <p>Once created, the EventControl object can be accessed as demonstrated
