point to krig.github.io instead of kri.gs

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ $('.eventcontrol').EventControl('zoom-out', focus);
     </div>
 
     <footer class="footer">
-      <p>&copy; 2016 <a href="http://kri.gs/">Kristoffer Gronlund</a></p>
+      <p>&copy; 2016 <a href="http://krig.github.io/">Kristoffer Gronlund</a></p>
     </footer>
 
   </div>
